@@ -186,6 +186,8 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/RECOMB_ExpPresNotPres.rpt">Signal present and absent in the same structure in the same Recombinant/Transgenic Assay</A>
 <LI><A HREF="/data/reports/qcreports_db/output/RECOMB_ChildExpNotParent.rpt">Signal present in child but not parent in the same Recombination/Transgenic Assay</A>
 <LI><A HREF="/data/reports/qcreports_db/output/RECOMB_ImageCheck.sql.rpt">Recombinase Image Check</A>
+<LI><A HREF="/data/reports/qcreports_db/output/RECOMB_Images.rpt">Recombinase Papers Requiring Images</A>
+<LI><A HREF="/data/reports/qcreports_db/output/RECOMB_LackingImages.rpt">Recombinase Papers Requiring Permissions</A>
 </OL>
 
 <A NAME="go"><B>GO</B></A>
